--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portal Aspirasi Siswa - Sampaikan Suara Anda</title>
+    <title>FASPIRA - Forum Aspirasi Siswa</title>
     <meta name="description" content="Platform aspirasi siswa yang aman dan mudah. Sampaikan pendapat, saran, atau keluhan Anda dengan mudah dan anonim." />
-    <meta name="author" content="Portal Aspirasi" />
+    <meta name="author" content="Forum Aspirasi Siswa" />
 
-    <meta property="og:title" content="Portal Aspirasi Siswa - Sampaikan Suara Anda" />
+    <meta property="og:title" content="FASPIRA - Forum Aspirasi Siswa" />
     <meta property="og:description" content="Platform aspirasi siswa yang aman dan mudah. Sampaikan pendapat, saran, atau keluhan Anda dengan mudah dan anonim." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
